# django-spaces-dashboard

./: .gitignore  setup.cfg
spaces_dashboard/: urls.py  views.py
spaces_dashboard/templates/spaces_dashboard/: dashboard.html
spaces_dashboard/templates/spaces_dashboard/includes/: activity_stream.html
